trying to fix blurred final score background

--- a/public/style.css
+++ b/public/style.css
@@ -171,23 +171,19 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
-
-#finalScoreContainer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  backdrop-filter: brightness(20%);
-  z-index: 2;
-}
-
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-  .backdrop-filter {
-    background-color: black;
+  #finalScoreContainer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);
     -webkit-backdrop-filter: blur(2em);
     backdrop-filter: blur(2em);
+    z-index: 1;
+    overflow: hidden;
   }
 }
 
@@ -197,7 +193,7 @@ input:checked + .slider:before {
   width: 65vw;
   height: 35vh;
   position: relative;
-  z-index: 1;
+  z-index: 2;
   border-radius: 8px;
   top: 25%;
   border: 0.2rem solid #4b4453;
